--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jspdf": "^2.5.1",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
+    "next-themes": "^0.4.6",
     "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
